syntax = "proto3";

package proto;

option go_package = "./";

message GoodsAddReq {
  string name = 1;
  fixed32 price =2;
  int64 num =3;
  string color =4;
  string sign =5;
}

message GoodsAddResp {
  string msg = 1;
  int64 code = 2;
}
message LoginReq {
  string name =1;
  string password =2;
}

message LoginResp {
  string msg = 1;
  int64 code = 2;
  int64 id =3;


}
service goods {
  rpc Login(LoginReq) returns (LoginResp);
  rpc GoodsAdd(GoodsAddReq) returns (GoodsAddResp);
}